@@ -155,7 +155,7 @@ grub_net_recv_udp_packet (struct grub_net_buff *nb,
   if (nb->tail - nb->data < (grub_ssize_t) sizeof (*udph))
     {
       grub_dprintf ("net", "UDP packet too short: %" PRIuGRUB_SIZE "\n",
-		    nb->tail - nb->data);
+		    (grub_size_t) (nb->tail - nb->data));
       grub_netbuff_free (nb);
       return GRUB_ERR_NONE;
     }
